// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input addon demo works fine 1`] = `
<div
  class="tdesign-demo-item--input__input-box"
>
  <div
    class="t-addon t-addon--prepend"
  >
    <span
      class="t-addon__prepend"
    >
      http://
    </span>
    <div
      class="t-input t-size-m"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
      />
    </div>
  </div>
   
  <div
    class="t-addon t-addon--append"
  >
    <div
      class="t-input t-size-m"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
      />
    </div>
    <span
      class="t-addon__append"
    >
      .com
    </span>
  </div>
   
  <div
    class="t-addon t-addon--prepend t-addon--append"
  >
    <span
      class="t-addon__prepend"
    >
      http://
    </span>
    <div
      class="t-input t-size-m"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
      />
    </div>
    <span
      class="t-addon__append"
    >
      .com
    </span>
  </div>
</div>
`;

exports[`Input base demo works fine 1`] = `
<div
  class="tdesign-demo-item--input__input-box"
>
  <div
    class="t-input t-size-m"
  >
    <input
      class="t-input__inner"
      placeholder="请输入内容"
      type="text"
    />
  </div>
</div>
`;

exports[`Input disabled demo works fine 1`] = `
<div
  class="tdesign-demo-item--input__input-box"
>
  <div
    class="t-input t-size-m t-is-disabled"
  >
    <input
      class="t-input__inner"
      disabled="disabled"
      type="text"
    />
  </div>
</div>
`;

exports[`Input group demo works fine 1`] = `
<div
  class="tdesign-demo-item--input__input-box"
>
  <div>
    <div
      class="t-input-group t-input-group--seperate"
    >
      <div
        class="t-input t-size-m"
        style="width: 100px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
       
      <div
        class="t-input t-size-m"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="t-input-group t-input-group--seperate"
    >
      <div
        class="t-input t-size-m"
        style="width: 100px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
       
      <div
        class="t-input t-size-m"
        style="margin-left: -1px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="t-input-group t-input-group--seperate"
    >
      <div
        class="t-input t-size-m"
        style="width: 100px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
       
      <span
        style="margin-left: 5px; line-height: 32px;"
      >
        -
      </span>
       
      <div
        class="t-input t-size-m"
        style="width: 100px; margin-left: 5px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
       
      <div
        class="t-input t-size-m"
        style="width: 100px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
       
      <div
        class="t-input t-size-m"
        style="width: 100px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="t-input-group t-input-group--seperate"
    >
      <div
        class="t-input t-size-m"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
       
      <div
        class="t-input t-size-m"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="t-input-group"
    >
      <div
        class="t-input t-size-m"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
       
      <div
        class="t-input t-size-m"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="t-input-group t-input-group--seperate"
    >
      <div
        class="t-input t-size-m"
        style="width: 100px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
       
      <span
        style="line-height: 32px;"
      >
         - 
      </span>
       
      <div
        class="t-input t-size-m"
        style="width: 100px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
       
      <div
        class="t-input t-size-m"
        style="width: 100px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
       
      <div
        class="t-input t-size-m"
        style="width: 100px;"
      >
        <input
          class="t-input__inner"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input icon demo works fine 1`] = `
<div
  class="tdesign-demo-item--input__input-box"
>
  <div
    class="t-input t-size-m t-input--prefix t-input--suffix"
  >
    <span
      class="t-input__prefix"
    >
      <svg
        class="t-icon t-icon-lock-on"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 192C444.5208448 192 389.23743232 244.21617856 384.35108736 310.44721024L384 320 320 320C320 213.961328 405.961328 128 512 128 614.25157632 128 697.8342976 207.93087744 703.6740672 308.71854144L704 320 782.7692288 320C809.9586368 320 832 352.74717248 832 393.14285696L832 758.8571456C832 799.2528256 809.9586368 832 782.7692288 832L241.23076928 832C214.0413664 832 192 799.2528256 192 758.8571456L192 393.14285696C192 352.74717248 214.0413664 320 241.23076928 320L640 320C640 249.307552 582.692448 192 512 192ZM768 384L256 384 256 768 768 768 768 384ZM544.70655104 511.92788736L544.70655104 703.9278848 480.70655104 703.9278848 480.70655104 511.92788736 544.70655104 511.92788736Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <input
      class="t-input__inner"
      type="password"
    />
    <span
      class="t-input__suffix"
    >
      <svg
        class="t-icon t-icon-info-circle"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM512 160C317.59576832 160 160 317.59576832 160 512 160 706.4042304 317.59576832 864 512 864 706.4042304 864 864 706.4042304 864 512 864 317.59576832 706.4042304 160 512 160ZM544 416L544 672 608 672 608 736 480 736 480 480 416 480 416 416 544 416ZM544 288L544 352 480 352 480 288 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
   
  <div
    class="t-input t-size-m t-input--prefix t-input--suffix"
  >
    <span
      class="t-input__prefix"
    >
      <svg
        class="t-icon t-icon-lock-on"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 192C444.5208448 192 389.23743232 244.21617856 384.35108736 310.44721024L384 320 320 320C320 213.961328 405.961328 128 512 128 614.25157632 128 697.8342976 207.93087744 703.6740672 308.71854144L704 320 782.7692288 320C809.9586368 320 832 352.74717248 832 393.14285696L832 758.8571456C832 799.2528256 809.9586368 832 782.7692288 832L241.23076928 832C214.0413664 832 192 799.2528256 192 758.8571456L192 393.14285696C192 352.74717248 214.0413664 320 241.23076928 320L640 320C640 249.307552 582.692448 192 512 192ZM768 384L256 384 256 768 768 768 768 384ZM544.70655104 511.92788736L544.70655104 703.9278848 480.70655104 703.9278848 480.70655104 511.92788736 544.70655104 511.92788736Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <input
      class="t-input__inner"
      type="password"
    />
    <span
      class="t-input__suffix"
    >
      <svg
        class="t-icon t-icon-info-circle"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM512 160C317.59576832 160 160 317.59576832 160 512 160 706.4042304 317.59576832 864 512 864 706.4042304 864 864 706.4042304 864 512 864 317.59576832 706.4042304 160 512 160ZM544 416L544 672 608 672 608 736 480 736 480 480 416 480 416 416 544 416ZM544 288L544 352 480 352 480 288 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Input size demo works fine 1`] = `
<div
  class="tdesign-demo-item--input__input-box"
>
  <div
    class="t-input t-size-l"
  >
    <input
      class="t-input__inner"
      placeholder="请输入内容"
      type="text"
    />
  </div>
   
  <div
    class="t-input t-size-m"
  >
    <input
      class="t-input__inner"
      placeholder="请输入内容"
      type="text"
    />
  </div>
   
  <div
    class="t-input t-size-s"
  >
    <input
      class="t-input__inner"
      placeholder="请输入内容"
      type="text"
    />
  </div>
</div>
`;

exports[`Input status demo works fine 1`] = `
<div
  class="tdesign-demo-item--input__input-box"
>
  <div
    class="t-input t-size-m t-is-success"
  >
    <input
      class="t-input__inner"
      type="text"
    />
  </div>
   
  <div
    class="t-input t-size-m t-is-warning"
  >
    <input
      class="t-input__inner"
      type="text"
    />
  </div>
   
  <div
    class="t-input t-size-m t-is-error"
  >
    <input
      class="t-input__inner"
      type="text"
    />
  </div>
</div>
`;
